BUGFIX: fix z-index on modal so that gameplay still works

--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -35,6 +35,7 @@
   background-color: white;
   box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
   border-radius: 0.7rem;
+  z-index: 99999;
 }
 
 .modal-content {
@@ -42,10 +43,6 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 1rem 2rem;
-}
-
-.zIndex {
-  z-index: -1;
 }
 
 .hidden {
